# rmrf

./: .gitignore  README.html  README.md  pyproject.toml
.github/: FUNDING.yml
src/rmrf/: __init__.py  cli.py  fs.py  markdown.py  parse.py  svg.py  zotero_helper.py
src/rmrf/base/: __init__.py  fs.py
src/rmrf/export/: __init__.py  base.py  markdown.py  svg.py
src/rmrf/utils/: __init__.py  writing_tools.py  zotero_helper.py
utils/: hooked_stream.py  visual.py
