[project]
name = "rmrf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "rich>=13.9.3",
    "pymupdf>=1.24.12",
    "rmscene",
    "python-dotenv>=1.0.1",
    "pyzotero>=1.5.25",
    "pillow>=11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
rmscene = { git = "https://github.com/ChenghaoMou/rmscene.git" }
