[project]
name = "rmrf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.9.3",
    "pymupdf>=1.24.12",
    "python-dotenv>=1.0.1",
    "pyzotero>=1.5.25",
    "pillow>=11.0.0",
    "shapely>=2.0.6",
    "diskcache>=5.6.3",
    "rmscene",
    "jinja2>=3.1.4",
    "typer>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "streamlit>=1.22.0",
    "matplotlib>=3.9.2",
    "pillow>=11.0.0",
    "gradio>=3.36.1",
    "setuptools>=75.6.0",
]

[tool.uv.sources]
rmscene = { path = "../rmscene", editable = true }
